feat: all views and restapi

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="A very responsive clone of Hashnode's landing page built with HTML, SASS, JavaScript and Django" />
+    <meta
+      name="description"
+      content="A very responsive clone of Hashnode's landing page built with HTML, SASS, JavaScript and Django"
+    />
     <meta name="keywords" content="Hashnode, clone, Ulugbek, Erkinov" />
-    <title>
-      Hashnode Clone: Built by Ulugbek Erkinov
-    </title>
+    <title>Hashnode Clone: Built by Ulugbek Erkinov</title>
     <!-- Fontawesome -->
     <link
       rel="stylesheet"
@@ -752,8 +753,8 @@
             <div class="card">
               <h3>
                 "Hashnode is super developer-friendly. I like it much better
-                than Medium. Being able to write blogs solely using markdown and
-                auto backup with GitHub is awesome! Goodbye, Medium."
+                than hashnode. Being able to write blogs solely using markdown
+                and auto backup with GitHub is awesome! Goodbye, hashnode."
               </h3>
 
               <div>
@@ -950,8 +951,9 @@
             <ul>
               <h4>Comparisons</h4>
               <li>
-                <a href="https://hashnode.com/vs/medium?source=hashnode-footer"
-                  >Hashnode vs Medium</a
+                <a
+                  href="https://hashnode.com/vs/hashnode?source=hashnode-footer"
+                  >Hashnode vs hashnode</a
                 >
               </li>
               <li>
@@ -1043,4 +1045,3 @@
     </div>
   </body>
 </html>
-
